2010-02-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm (find_nearest_color):  When looking for RGB colors, check
	both the user-loaded colors and the default set of colors.  Otherwise 
	RGB fails if the user has loaded no colors.

	* term/gd.trm:  Documentation for the mechanism for setting line colors
	in the 'set term' command is out of date, and anyhow the mechanism is
	needed only for the terminal background.  Line colors can now be handled
	in terminal-independent commands.  Revise the docs accordingly.

2010-02-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/specfun.c (ibeta) docs/gnuplot.doc:
	The approximation used for the function ibeta(a,b,x) was taken from 
	Abramowitz & Stegun. However we failed to document that it is only
	usable on the domain x < (a-1)/(a+b-2).  Add this warning to the docs
	and make sure that the function itself returns a consistant error
	value (-1) if the domain or range is invalid.
	Bug #2957184

2010-02-22  Christoph Junghans (ottxor)

	* configure.in: Fix order of processing configuration options.
	Bug #2951583 #2956754

2010-02-18  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Use dynamic allocation for all font names. This prevents
	buffer overflow problems for very long font names.

2010-02-17  Christoph Junghans (ottxor)

	* configure.in plot.c: New configuration option to add local packager to
	list of contacts for bug reporting.
	Bug #2951583

2010-02-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Add brackets to suppress compiler complaints.
	* src/term.c (do_arc): Sanity checks for start and end angles of arc.
	* configure.in: Change default installation directory for x11 resources
	to /etc/X11/app-defaults.  Bug #1953742

2010-02-17  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/plot.c (interrupt_setup): Ctrl+C crashes windows console build.
	SF Patch #2848002

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>
